converting to json

--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
   <script>
-    const parser = new RSSParser();
-    const feedUrls = [
-      '/feeds/bleepingcomputer_feed.xml',
-      '/feeds/thehackersnews_feed.xml'
-    ];
-
-    async function fetchFeeds() {
+    (async () => {
+      const feedUrls = [
+        '/feeds/bleepingcomputer_feed.json',
+        '/feeds/thehackersnews_feed.json'
+      ];
       let feedItems = [];
-
+  
       for (const url of feedUrls) {
-        const feed = await parser.parseURL(url);
-        feedItems = feedItems.concat(feed.items);
+        try {
+          const response = await fetch(url);
+          const feed = await response.json();
+          feedItems = feedItems.concat(feed.items);
+        } catch (error) {
+          console.error(`Error fetching or parsing feed at ${url}:`, error);
+        }
       }
-
+  
       // Sort items by publication date
       feedItems.sort((a, b) => new Date(b.pubDate) - new Date(a.pubDate));
-
+  
       // Display items
       const feedList = document.getElementById('feed-list');
       feedItems.forEach(item => {
         const listItem = document.createElement('li');
-        listItem.innerHTML = `<a href="${item.link}">${item.title}</a> - ${item.pubDate}`;
+        listItem.innerHTML = `<a href="${item.link}">${item.title}</a> - ${new Date(item.pubDate).toLocaleString()}`;
         feedList.appendChild(listItem);
       });
-    }
-
-    fetchFeeds();
+    })();
   </script>
 </body>
 </html>
