--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Consolidated Cyber News RSS Feed</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Latest Cyber News</h1>
