--- a/index.html
+++ b/index.html
@@ -5,39 +5,27 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Latest Cyber News</h1>
-  <ul id="feed-list"></ul>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
-  <script>
-    (async () => {
-      const feedUrls = [
-        '/beep/feeds/bleepingcomputer_feed.json',
-        '/beep/feeds/thehackersnews_feed.json'
-      ];
-      let feedItems = [];
+    <h1>Latest Cyber News</h1>
   
-      for (const url of feedUrls) {
-        try {
-          const response = await fetch(url);
-          const feed = await response.json();
-          feedItems = feedItems.concat(feed.items);
-        } catch (error) {
-          console.error(`Error fetching or parsing feed at ${url}:`, error);
-        }
-      }
+    <div class="items-per-page">
+      <label for="itemsPerPage">Items per page:</label>
+      <select id="itemsPerPage">
+        <option value="15">15</option>
+        <option value="25">25</option>
+        <option value="50">50</option>
+      </select>
+    </div>
   
-      // Sort items by publication date
-      feedItems.sort((a, b) => new Date(b.pubDate) - new Date(a.pubDate));
+    <ul id="feed-list"></ul>
   
-      // Display items
-      const feedList = document.getElementById('feed-list');
-      feedItems.forEach(item => {
-        const listItem = document.createElement('li');
-        listItem.innerHTML = `<a href="${item.link}">${item.title}</a> - ${new Date(item.pubDate).toLocaleString()}`;
-        feedList.appendChild(listItem);
-      });
-    })();
-  </script>
-</body>
+    <div class="pagination">
+      <button id="prevPage">Previous</button>
+      <span id="pageInfo"></span>
+      <button id="nextPage">Next</button>
+    </div>
+  
+    <!-- Include scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
+    <script src="script.js"></script>
+  </body>  
 </html>
