--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/beep/script.js"></script>
   </body>  
 </html>
