--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Consolidated Cyber News RSS Feed</title>
+  <title>Consolidated Cyber News Feed</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
         <option value="15">15</option>
         <option value="25">25</option>
         <option value="50">50</option>
+        <option value="100">100</option>
       </select>
     </div>
   
