--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Consolidated Cyber News Feed</title>
+  <title>Latest Cyber News</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
