adding index count

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <span id="pageInfo"></span>
       <button id="nextPage">Next</button>
     </div>
+
+    <!-- Add a new element to display the total number of items -->
+    <div id="totalItems" class="total-items"></div>
   
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
