adding header redirect

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Latest Cyber News</h1>
+    <h1><a href="#" id="homeLink">Latest Cyber News</a></h1>
   
     <div class="items-per-page">
       <label for="itemsPerPage">Items per page:</label>
@@ -19,10 +19,10 @@
   
     <ul id="feed-list"></ul>
   
-    <div class="pagination">
+    <div class="pagination"></div>
       <button id="prevPage">Previous</button>
       <span id="pageInfo"></span>
-      <button id="nextPage">Next</button>
+      <button id="""nextPage">Next</button>
     </div>
 
     <!-- Add a new element to display the total number of items -->
@@ -31,5 +31,12 @@
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
     <script src="scripts.js"></script>
+    <script>
+      document.getElementById('homeLink').addEventListener('click', (e) => {
+        e.preventDefault();
+        currentPage = 1;
+        displayItems();
+      });
+    </script>
   </body>  
 </html>
