adding article counter

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Latest Cyber News</title>
+  <title>Hermes</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
@@ -28,6 +28,8 @@
       <span id="pageInfo"></span>
       <button id="nextPage">Next</button>
     </div>
+
+    <div id="totalArticleCount" class="total-article-count"></div>
   
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
