adding home anchor

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="favicons/site.webmanifest">
 </head>
 <body>
-    <h1>Latest Cyber News</h1>
+    <h1><a href="#" id="homeLink">Latest Cyber News</a></h1>
   
     <div class="items-per-page">
       <label for="itemsPerPage">Items per page:</label>
