fixing top menu bar

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 </head>
 <body>
     <div class="top-menu-bar">
-      <a href="#" id="homeLink">Feed</a>
-      <div class="pagination">
-        <button id="prevPage">Previous</button>
-        <span id="pageInfo"></span>
-        <button id="nextPage">Next</button>
-      </div>
+      <a href="#" id="homeLink">Latest Cyber News</a>
     </div>
   
     <div class="items-per-page">
@@ -31,6 +26,14 @@
     <ul id="feed-list"></ul>
 
     <div id="totalArticleCount" class="total-article-count"></div>
+  
+    <div class="bottom-menu-bar">
+      <div class="pagination">
+        <button id="prevPageBottom">Previous</button>
+        <span id="pageInfoBottom"></span>
+        <button id="nextPageBottom">Next</button>
+      </div>
+    </div>
   
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
