--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <link rel="manifest" href="favicons/site.webmanifest">
 </head>
 <body>
-    <div class="top-menu-bar">
-      <a href="#" id="homeLink">Latest Cyber News</a>
-    </div>
+    <h1>Latest Cyber News</h1>
   
     <div class="items-per-page">
       <label for="itemsPerPage">Items per page:</label>
@@ -24,16 +22,14 @@
     </div>
   
     <ul id="feed-list"></ul>
+  
+    <div class="pagination">
+      <button id="prevPage">Previous</button>
+      <span id="pageInfo"></span>
+      <button id="nextPage">Next</button>
+    </div>
 
     <div id="totalArticleCount" class="total-article-count"></div>
-  
-    <div class="bottom-menu-bar">
-      <div class="pagination">
-        <button id="prevPageBottom">Previous</button>
-        <span id="pageInfoBottom"></span>
-        <button id="nextPageBottom">Next</button>
-      </div>
-    </div>
   
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
