adding contribute button

--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
     <script src="scripts.js"></script>
+
+    <a href="https://github.com/matheo-lm/beep" class="github-button" target="_blank">
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo">
+        Contribute on GitHub
+    </a>
   </body>  
 </html>
