--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
         <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo">
         Contribute on GitHub
     </a>
+
+    <a href="/feeds.html" class="total-article-button">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/news.png" alt="Feeds Logo">
+        Feeds
+    </a>
   </body>  
 </html>
