fixed feed button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         Contribute on GitHub
     </a>
 
-    <a href="/feeds.html" class="total-article-button">
+    <a href="/beep/feeds.html" class="total-article-button">
         <img src="https://img.icons8.com/ios-filled/50/ffffff/news.png" alt="Feeds Logo">
         Feeds
     </a>
