--- a/feeds.html
+++ b/feeds.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="header-title"><a href="feeds.html">All Ingested Feeds</a></h1>
+    <h1 class="header-title"><a href="index.html">All Ingested Feeds</a></h1>
     <ul id="feed-list">
         <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/bleepingcomputer_feed.json">bleepingcomputer_feed.json</a></li>
         <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/thehackersnews_feed.json">thehackernews_feed.json</a></li>
