--- a/feeds.html
+++ b/feeds.html
@@ -13,7 +13,7 @@
     <ul id="feed-list">
         <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/bleepingcomputer_feed.json">bleepingcomputer_feed.json</a></li>
         <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/thehackersnews_feed.json">thehackernews_feed.json</a></li>
-        <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/kbs.json">krebsnosecurity_feed.json</a></li>
+        <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/kbs.json">krebsonsecurity_feed.json</a></li>
       </ul>
     <script src="scripts.js"></script>
 </body>
