--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
   <title>Hermes</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
   <link rel="manifest" href="favicons/site.webmanifest">
 </head>
 <body>
-    <h1 class="header-title"><a href="index.html">Latest Cyber News</a></h1>
+    <h1 class="header-title text-center"><a href="index.html" class="text-dark">Latest Cyber News</a></h1>
   
-    <div class="items-per-page">
-      <label for="itemsPerPage">Items per page:</label>
-      <select id="itemsPerPage">
+    <div class="items-per-page text-center mb-4">
+      <label for="itemsPerPage" class="mr-2">Items per page:</label>
+      <select id="itemsPerPage" class="custom-select w-auto d-inline-block">
         <option value="15">15</option>
         <option value="25">25</option>
         <option value="50">50</option>
@@ -21,28 +21,35 @@
       </select>
     </div>
   
-    <ul id="feed-list"></ul>
+    <ul id="feed-list" class="list-unstyled"></ul>
   
-    <div class="pagination">
-      <button id="prevPage">Previous</button>
-      <span id="pageInfo"></span>
-      <button id="nextPage">Next</button>
+    <div class="pagination-container text-center mt-4">
+      <div class="d-flex justify-content-center">
+        <button id="prevPage" class="btn btn-secondary">Previous</button>
+        <span id="pageInfo" class="mx-3"></span>
+        <button id="nextPage" class="btn btn-secondary">Next</button>
+      </div>
     </div>
 
-    <div id="totalArticleCount" class="total-article-count"></div>
+    <div id="totalArticleCount" class="total-article-count text-center mt-4 text-muted"></div>
   
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="scripts.js"></script>r
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <a href="https://github.com/matheo-lm/beep" class="github-button" target="_blank">
-        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo">
-        Contribute on GitHub
-    </a>
+    <div class="d-flex justify-content-between fixed-bottom mb-4 px-4">
+      <a href="https://github.com/matheo-lm/beep" class="github-button btn btn-dark">
+          <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" class="mr-2" style="width: 20px; height: 20px;">
+          Contribute on GitHub
+      </a>
 
-    <a href="/beep/feeds.html" class="total-article-button">
-        <img src="https://img.icons8.com/ios-filled/50/ffffff/news.png" alt="Feeds Logo">
-        Feeds
-    </a>
+      <a href="/beep/feeds.html" class="total-article-button btn btn-dark">
+          <img src="https://img.icons8.com/ios-filled/50/ffffff/news.png" alt="Feeds Logo" class="mr-2" style="width: 20px; height: 20px;">
+          Feeds
+      </a>
+    </div>
   </body>  
 </html>
