adding number of items

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="manifest" href="favicons/site.webmanifest">
 </head>
 <body>
-    <h1 class="header-title text-center"><a href="index.html" class="text-dark">Latest Cyber News</a></h1>
+    <h1 class="header-title text-center"><a href="index.html" class="text-dark">Cyber News</a></h1>
   
     <div class="items-per-page text-center mb-4">
       <label for="itemsPerPage" class="mr-2">Items per page:</label>
       <select id="itemsPerPage" class="custom-select w-auto d-inline-block">
-        <option value="15">15</option>
         <option value="25">25</option>
         <option value="50">50</option>
+        <option value="75">75</option>
         <option value="100">100</option>
       </select>
     </div>
