adding padding to css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="favicons/site.webmanifest">
 </head>
 <body>
-    <h1 class="header-title text-center"><a href="index.html" class="text-dark">Cyber News</a></h1>
+    <h1 class="header-title text-center"><a href="index.html" class="text-dark">Latest Cybersecurity News</a></h1>
   
     <div class="items-per-page text-center mb-4">
       <label for="itemsPerPage" class="mr-2">Items per page:</label>
@@ -21,7 +21,7 @@
       </select>
     </div>
   
-    <ul id="feed-list" class="list-unstyled"></ul>
+    <ul id="feed-list" class="list-unstyled p-3"></ul>
   
     <div class="pagination-container text-center mt-4">
       <div class="d-flex justify-content-center">
@@ -35,7 +35,7 @@
   
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
-    <script src="scripts.js"></script>r
+    <script src="scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
