--- a/feeds.html
+++ b/feeds.html
@@ -12,9 +12,9 @@
 <body>
     <h1 class="header-title text-center"><a href="index.html" class="text-dark">All Ingested Feeds</a></h1>
     <ul id="feed-list" class="list-unstyled">
-        <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/bleepingcomputer_feed.json">bleepingcomputer_feed.json</a></li>
-        <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/thehackersnews_feed.json">thehackernews_feed.json</a></li>
-        <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/refs/heads/main/feeds/kbs.json">krebsonsecurity_feed.json</a></li>
+        <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/bleepingcomputer_feed.json">bpc_feed.json</a></li>
+        <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/3c045b1c94ecc96bc9192ddc28ddb52e6dedacdc/feeds/thehackersnews_feed.json">thn_feed.json</a></li>
+        <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/refs/heads/main/feeds/kbs.json">kos_feed.json</a></li>
       </ul>
     <script src="scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
