fixing feeds formatting

--- a/feeds.html
+++ b/feeds.html
@@ -3,7 +3,6 @@
 <head>
   <title>Feeds</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css">
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
@@ -11,11 +10,13 @@
 </head>
 <body>
     <h1 class="header-title text-center"><a href="index.html" class="text-dark">All Ingested Feeds</a></h1>
-    <ul id="feed-list" class="list-unstyled">
+    <div class="container mb-4">
+      <ul id="feed-list" class="list-unstyled p-3">
         <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/refs/heads/main/feeds/bpc.json">bpc_feed.json</a></li>
         <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/refs/heads/main/feeds/thn.json">thn_feed.json</a></li>
         <li><a href="https://raw.githubusercontent.com/matheo-lm/beep/refs/heads/main/feeds/kbs.json">kos_feed.json</a></li>
       </ul>
+    </div>
     <script src="scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
