--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
   <link rel="manifest" href="favicons/site.webmanifest">
 </head>
 <body>
-    <h1 class="header-title text-center"><a href="index.html" class="text-dark">Latest Cybersecurity News</a></h1>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">Hermes</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Status</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Incidents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Intel</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Exploits</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <h1 class="header-title text-right"><a href="index.html" class="text-dark">.</a></h1>
   
     <div class="container mb-4">
       <div class="row justify-content-center">
