--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </select>
         </div>
         <div class="col-auto">
-          <input type="text" id="searchInput" class="form-control d-inline-block w-auto" placeholder="Search articles...">
+          <input type="text" id="searchInput" class="form-control d-inline-block w-auto" placeholder="Search...">
         </div>
         <div class="col-auto">
           <button id="searchButton" class="btn btn-primary">Search</button>
