adding search by tags functionality

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Status</a>
+            <a class="nav-link" href="#status">Status</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Incidents</a>
+            <a class="nav-link" href="#hackcidents">Hackcidents</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Intel</a>
+            <a class="nav-link" href="#intel">Intel</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">News</a>
+            <a class="nav-link" href="#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Exploits</a>
+            <a class="nav-link" href="#exploits">Exploits</a>
           </li>
         </ul>
       </div>
     </nav>
 
-    <h1 class="header-title text-right"><a href="index.html" class="text-dark">.</a></h1>
+    <h1 class="header-title text-center"><a href="index.html" class="text-dark">Latest Cyber ...</a></h1>
   
     <div class="container mb-4">
       <div class="row justify-content-center">
