--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
   <link rel="manifest" href="favicons/site.webmanifest">
+  <link rel="stylesheet" href="darkmode.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -33,6 +34,7 @@
             <a class="nav-link" href="#exploits">Exploits</a>
           </li>
         </ul>
+        <button id="darkModeToggle" class="btn btn-dark ml-auto">Dark Mode</button>
       </div>
     </nav>
 
@@ -62,9 +64,9 @@
   
     <div class="pagination-container text-center mt-4">
       <div class="d-flex justify-content-center">
-        <button id="prevPage" class="btn btn-secondary">Previous</button>
+        <button id="prevPage" class="btn btn-secondary"> < </button>
         <span id="pageInfo" class="mx-3"></span>
-        <button id="nextPage" class="btn btn-secondary">Next</button>
+        <button id="nextPage" class="btn btn-secondary"> > </button>
       </div>
     </div>
 
