--- a/index.html
+++ b/index.html
@@ -38,25 +38,18 @@
       </div>
     </nav>
 
-    <h1 class="header-title text-center"><a href="index.html" class="text-dark">Latest Cyber ...</a></h1>
-  
-    <div class="container mb-4">
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <label for="itemsPerPage" class="mr-2">Items per page:</label>
-          <select id="itemsPerPage" class="custom-select w-auto d-inline-block">
-            <option value="25">25</option>
-            <option value="50">50</option>
-            <option value="75">75</option>
-            <option value="100">100</option>
-          </select>
-        </div>
-        <div class="col-auto">
-          <input type="text" id="searchInput" class="form-control d-inline-block w-auto" placeholder="Search...">
-        </div>
-        <div class="col-auto">
-          <button id="searchButton" class="btn btn-primary">Search</button>
-        </div>
+    <div class="container header-container">
+      <h1 class="header-title"><a href="index.html" class="text-dark">Latest Cyber &#10548;</a></h1>
+      <div class="d-flex align-items-center">
+        <label for="itemsPerPage" class="mr-2">Items per page:</label>
+        <select id="itemsPerPage" class="custom-select w-auto d-inline-block mr-3">
+          <option value="25">25</option>
+          <option value="50">50</option>
+          <option value="75">75</option>
+          <option value="100">100</option>
+        </select>
+        <input type="text" id="searchInput" class="form-control d-inline-block w-auto mr-2" placeholder="Search...">
+        <button id="searchButton" class="btn btn-primary">Search</button>
       </div>
     </div>
   
