--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
   <link rel="manifest" href="favicons/site.webmanifest">
   <link rel="stylesheet" href="stylish.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <!-- Navigation Bar -->
