remove github text

--- a/index.html
+++ b/index.html
@@ -74,15 +74,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <div class="d-flex justify-content-between fixed-bottom mb-4 px-4">
-      <a href="https://github.com/matheo-lm/beep" class="github-button btn btn-dark">
-          <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" class="mr-2" style="width: 20px; height: 20px;">
-          Contribute on GitHub
+      <a href="https://github.com/matheo-lm/beep" class="github-button btn btn-dark d-flex justify-content-center align-items-center">
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 20px; height: 20px;">
       </a>
-
-      <a href="/beep/feeds.html" class="total-article-button btn btn-dark">
-          <img src="https://img.icons8.com/ios-filled/50/ffffff/news.png" alt="Feeds Logo" class="mr-2" style="width: 20px; height: 20px;">
-          Feeds
+    
+      <a href="/beep/feeds.html" class="total-article-button btn btn-dark d-flex justify-content-center align-items-center">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/news.png" alt="Feeds Logo" style="width: 20px; height: 20px;">
       </a>
-    </div>
+    </div>    
   </body>  
 </html>
