moving dark mode icon

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             <a class="nav-link" href="#exploits">Exploits</a>
           </li>
         </ul>
-        <button id="darkModeToggle" class="btn btn-dark ml-auto">Dark Mode</button>
       </div>
     </nav>
 
@@ -64,23 +63,23 @@
       </div>
     </div>
 
-    <div id="totalArticleCount" class="total-article-count text-center mt-4 text-muted"></div>
-  
-    <!-- Include scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
-    <script src="scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <div id="totalArticleCount" class="total-article-count text-center mt-4 text-muted">
+    </div>
+
+
 
     <div class="d-flex justify-content-between fixed-bottom mb-4 px-4">
       <a href="https://github.com/matheo-lm/beep" class="github-button btn btn-dark d-flex justify-content-center align-items-center">
         <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 20px; height: 20px;">
       </a>
     
-      <a href="/beep/feeds.html" class="total-article-button btn btn-dark d-flex justify-content-center align-items-center">
-        <img src="https://img.icons8.com/ios-filled/50/ffffff/news.png" alt="Feeds Logo" style="width: 20px; height: 20px;">
-      </a>
+      <a> <button id="darkModeToggle" class="btn btn-dark ml-auto">&#127769;</button> </a>
+    <!-- Include scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
+    <script src="scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </div>    
   </body>  
 </html>
