--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="index.html">
-        <img src="/hermes-logo-transparent.png" alt="Hermes Logo" style="height: 40px;">
+        <img src="hermes-logo-transparent.png" alt="Hermes Logo" style="height: 40px;">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
