--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <link rel="stylesheet" href="stylish.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RSWNKSGYB3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RSWNKSGYB3');
+</script>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
