--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <a> <button id="darkModeToggle" class="btn btn-dark ml-auto">&#127769;</button> </a>
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="scripts/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
