--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#status">Scholarly</a>
+            <a class="nav-link" href="#scholarly">Scholarly</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#hackcidents">Hackcidents</a>
