--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
   <link rel="manifest" href="favicons/site.webmanifest">
   <link rel="stylesheet" href="stylish.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.0.5/daterangepicker.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <!-- Google tag (gtag.js) -->
@@ -51,16 +52,37 @@
 
     <div class="container header-container">
       <h1 class="header-title"><a href="index.html" class="text-dark">Latest Cyber &#10548;</a></h1>
-      <div class="d-flex align-items-center">
-        <label for="itemsPerPage" class="mr-2">Items per page:</label>
-        <select id="itemsPerPage" class="custom-select w-auto d-inline-block mr-3">
-          <option value="25">25</option>
-          <option value="50">50</option>
-          <option value="75">75</option>
-          <option value="100">100</option>
-        </select>
-        <input type="text" id="searchInput" class="form-control d-inline-block w-auto mr-2" placeholder="Search...">
-        <button id="searchButton" class="btn btn-primary">Search</button>
+      <div class="mb-3 position-relative">
+        <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#filterOptions" aria-expanded="false" aria-controls="filterOptions">
+          Filters
+        </button>
+        <div class="collapse mt-3" id="filterOptions">
+          <div class="card card-body">
+            <div class="d-flex flex-column flex-md-row align-items-center mb-3">
+              <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
+                <label for="itemsPerPage" class="mr-2">Items per page:</label>
+                <select id="itemsPerPage" class="custom-select w-auto">
+                  <option value="25">25</option>
+                  <option value="50">50</option>
+                  <option value="75">75</option>
+                  <option value="100">100</option>
+                </select>
+              </div>
+              <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
+                <input type="text" id="searchInput" class="form-control w-auto mr-2" placeholder="Search...">
+                <button id="searchButton" class="btn btn-primary">Search</button>
+              </div>
+              <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
+                <button id="filter1d" class="btn btn-secondary mr-2">1d</button>
+                <button id="filter5d" class="btn btn-secondary mr-2">5d</button>
+                <button id="filter7d" class="btn btn-secondary">7d</button>
+              </div>
+              <div class="d-flex align-items-center">
+                <input type="text" id="customDateRange" class="form-control w-auto" placeholder="Select date range">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   
@@ -77,8 +99,6 @@
     <div id="totalArticleCount" class="total-article-count text-center mt-4 text-muted">
     </div>
 
-
-
     <div class="d-flex justify-content-between fixed-bottom mb-4 px-4">
       <a href="https://github.com/matheo-lm/beep" class="github-button btn btn-dark d-flex justify-content-center align-items-center">
         <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 20px; height: 20px;">
@@ -91,6 +111,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.0.5/daterangepicker.min.js"></script>
     </div>    
   </body>  
 </html>
