--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="manifest" href="favicons/site.webmanifest">
   <link rel="stylesheet" href="stylish.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.0.5/daterangepicker.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <!-- Google tag (gtag.js) -->
@@ -53,8 +54,8 @@
     <div class="container header-container">
       <h1 class="header-title"><a href="index.html" class="text-dark">Latest Cyber &#10548;</a></h1>
       <div class="mb-3 position-relative">
-        <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#filterOptions" aria-expanded="false" aria-controls="filterOptions">
-          Filters
+        <button id="filtersButton" class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target="#filterOptions" aria-expanded="false" aria-controls="filterOptions">
+          <i class="bi bi-funnel"></i> Filters
         </button>
         <div class="collapse mt-3" id="filterOptions">
           <div class="card card-body">
@@ -70,12 +71,12 @@
               </div>
               <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
                 <input type="text" id="searchInput" class="form-control w-auto mr-2" placeholder="Search...">
-                <button id="searchButton" class="btn btn-primary">Search</button>
+                <button id="searchButton" class="btn btn-primary btn-sm">Search</button>
               </div>
               <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
-                <button id="filter1d" class="btn btn-secondary mr-2">1d</button>
-                <button id="filter5d" class="btn btn-secondary mr-2">5d</button>
-                <button id="filter7d" class="btn btn-secondary">7d</button>
+                <button id="filter1d" class="btn btn-secondary btn-sm mr-2">1d</button>
+                <button id="filter5d" class="btn btn-secondary btn-sm mr-2">5d</button>
+                <button id="filter7d" class="btn btn-secondary btn-sm">7d</button>
               </div>
               <div class="d-flex align-items-center">
                 <input type="text" id="customDateRange" class="form-control w-auto" placeholder="Select date range">
@@ -105,6 +106,7 @@
       </a>
     
       <a> <button id="darkModeToggle" class="btn btn-dark ml-auto">&#127769;</button> </a>
+    </div>    
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
     <script src="scripts/scripts.js"></script>
@@ -113,6 +115,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.0.5/daterangepicker.min.js"></script>
-    </div>    
-  </body>  
+</body>
 </html>
