--- a/index.html
+++ b/index.html
@@ -52,35 +52,38 @@
     </nav>
 
     <div class="container header-container">
-      <h1 class="header-title"><a href="index.html" class="text-dark">Latest Cyber &#10548;</a></h1>
-      <div class="mb-3 position-relative">
+      <div class="d-flex justify-content-between fixed-bottom mb-4 px-4">
         <button id="filtersButton" class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target="#filterOptions" aria-expanded="false" aria-controls="filterOptions">
           <i class="bi bi-funnel"></i> Filters
         </button>
-        <div class="collapse mt-3" id="filterOptions">
-          <div class="card card-body">
-            <div class="d-flex flex-column flex-md-row align-items-center mb-3">
-              <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
-                <label for="itemsPerPage" class="mr-2">Items per page:</label>
-                <select id="itemsPerPage" class="custom-select w-auto">
-                  <option value="25">25</option>
-                  <option value="50">50</option>
-                  <option value="75">75</option>
-                  <option value="100">100</option>
-                </select>
-              </div>
-              <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
-                <input type="text" id="searchInput" class="form-control w-auto mr-2" placeholder="Search...">
-                <button id="searchButton" class="btn btn-primary btn-sm">Search</button>
-              </div>
-              <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
-                <button id="filter1d" class="btn btn-secondary btn-sm mr-2">1d</button>
-                <button id="filter5d" class="btn btn-secondary btn-sm mr-2">5d</button>
-                <button id="filter7d" class="btn btn-secondary btn-sm">7d</button>
-              </div>
-              <div class="d-flex align-items-center">
-                <input type="text" id="customDateRange" class="form-control w-auto" placeholder="Select date range">
-              </div>
+        <button id="darkModeToggle" class="btn btn-dark ml-auto">&#127769;</button>
+      </div>
+      <div class="collapse mt-3" id="filterOptions">
+        <div class="card card-body">
+          <div class="d-flex flex-column flex-md-row align-items-center mb-3">
+            <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
+              <label for="itemsPerPage" class="mr-2">Items per page:</label>
+              <select id="itemsPerPage" class="custom-select w-auto">
+                <option value="25">25</option>
+                <option value="50">50</option>
+                <option value="75">75</option>
+                <option value="100">100</option>
+              </select>
+            </div>
+            <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
+              <input type="text" id="searchInput" class="form-control w-auto mr-2" placeholder="Search...">
+              <button id="searchButton" class="btn btn-primary btn-sm">Search</button>
+            </div>
+            <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
+              <button id="filter1d" class="btn btn-secondary btn-sm mr-2">1d</button>
+              <button id="filter5d" class="btn btn-secondary btn-sm mr-2">5d</button>
+              <button id="filter7d" class="btn btn-secondary btn-sm">7d</button>
+            </div>
+            <div class="d-flex align-items-center">
+              <input type="text" id="customDateRange" class="form-control w-auto" placeholder="Select date range">
+            </div>
+            <div class="d-flex align-items-center ml-md-3 mt-2 mt-md-0">
+              <button id="clearFiltersButton" class="btn btn-danger btn-sm">Clear</button>
             </div>
           </div>
         </div>
@@ -99,18 +102,11 @@
 
     <div id="totalArticleCount" class="total-article-count text-center mt-4 text-muted">
     </div>
-
-    <div class="d-flex justify-content-between fixed-bottom mb-4 px-4">
-      <a href="https://github.com/matheo-lm/beep" class="github-button btn btn-dark d-flex justify-content-center align-items-center">
-        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 20px; height: 20px;">
-      </a>
     
-      <a> <button id="darkModeToggle" class="btn btn-dark ml-auto">&#127769;</button> </a>
-    </div>    
     <!-- Include scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script>
     <script src="scripts/scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
