--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </nav>
 
-    <div class="container header-container">
+    <div class="container header-container-fluid">
       <div class="d-flex justify-content-between fixed-bottom mb-4 px-4">
         <button id="filtersButton" class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target="#filterOptions" aria-expanded="false" aria-controls="filterOptions">
           <i class="bi bi-funnel"></i> Filters
@@ -62,17 +62,16 @@
         <div class="card card-body">
           <div class="d-flex flex-column flex-md-row align-items-center mb-3">
             <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
+              <input type="text" id="searchInput" class="form-control w-auto mr-2" placeholder="Search...">
+              <button id="searchButton" class="btn btn-primary btn-sm">Search</button>
+            </div>
+            <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
               <label for="itemsPerPage" class="mr-2">Items per page:</label>
               <select id="itemsPerPage" class="custom-select w-auto">
                 <option value="25">25</option>
                 <option value="50">50</option>
-                <option value="75">75</option>
                 <option value="100">100</option>
               </select>
-            </div>
-            <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
-              <input type="text" id="searchInput" class="form-control w-auto mr-2" placeholder="Search...">
-              <button id="searchButton" class="btn btn-primary btn-sm">Search</button>
             </div>
             <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
               <button id="filter1d" class="btn btn-secondary btn-sm mr-2">1d</button>
