--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
               <input type="text" id="searchInput" class="form-control w-auto mr-2" placeholder="Search...">
               <button id="searchButton" class="btn btn-primary btn-sm">Search</button>
             </div>
-            <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
+            <!-- Remove items per page selection -->
+            <!-- <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
               <label for="itemsPerPage" class="mr-2">Items per page:</label>
               <select id="itemsPerPage" class="custom-select w-auto">
                 <option value="5">5</option>
@@ -73,7 +74,7 @@
                 <option value="50">50</option>
                 <option value="100">100</option>
               </select>
-            </div>
+            </div> -->
             <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
               <button id="filter1d" class="btn btn-secondary btn-sm mr-2">1d</button>
               <button id="filter5d" class="btn btn-secondary btn-sm mr-2">5d</button>
@@ -90,23 +91,22 @@
       </div>
     </div>
   
-    <ul id="feed-list" class="list-unstyled p-3"></ul>
+    <div id="content-container">
+      <ul id="feed-list" class="list-unstyled p-3"></ul>
   
-    <div class="pagination-container text-center mt-4">
-      <div class="d-flex justify-content-center">
-        <button id="prevPage" class="btn btn-secondary"> < </button>
-        <span id="pageInfo" class="mx-3"></span>
-        <button id="nextPage" class="btn btn-secondary"> > </button>
+      <!-- Add "Load More" button -->
+      <div class="text-center mt-4">
+        <button id="loadMoreButton" class="btn btn-primary">Load More</button>
       </div>
+  
+      <div id="totalArticleCount" class="total-article-count text-center mt-4 text-muted">
+      </div>
+  
+      <footer class="text-center mt-4">
+        <span id="totalArticlesBadge" class="badge badge-secondary"></span>
+        <span id="lastUpdatedBadge" class="badge badge-success"></span>
+      </footer>
     </div>
-
-    <div id="totalArticleCount" class="total-article-count text-center mt-4 text-muted">
-    </div>
-
-    <footer class="text-center mt-4">
-      <span id="totalArticlesBadge" class="badge badge-secondary"></span>
-      <span id="lastUpdatedBadge" class="badge badge-success"></span>
-    </footer>
     
     <!-- Include scripts -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.12.0/rss-parser.min.js"></script> -->
