--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </script>
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <a class="navbar-brand" href="index.html">
         <img src="img/hermes-logo-transparent.png" alt="Hermes Logo" style="height: 40px;">
       </a>
