added side containers

--- a/index.html
+++ b/index.html
@@ -81,13 +81,21 @@
       </div>
     </div>
   
-    <div id="content-container">
-      <ul id="feed-list" class="list-unstyled p-3"></ul>
-  
-      <!-- Add "Load More" button -->
-      <div class="text-center mt-4">
-        <button id="loadMoreButton" class="btn btn-primary">Load More</button>
+    <div id="page-main-container"> 
+      <div class="container-left">
       </div>
+
+      <div id="content-container">
+        <ul id="feed-list" class="list-unstyled p-3"></ul>
+  
+      <div class="container-right">
+      </div>
+        <!-- Add "Load More" button -->
+        <div class="text-center mt-4">
+          <button id="loadMoreButton" class="btn btn-primary">Load More</button>
+        </div>
+    </div>
+
   
       <div id="totalArticleCount" class="total-article-count text-center mt-4 text-muted">
       </div>
