--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
           <li class="nav-item">
             <a class="nav-link" href="#scholarly">Scholarly</a>
           </li>
@@ -48,8 +48,12 @@
             <a class="nav-link" href="#exploits">Exploits</a>
           </li>
         </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input type="text" id="searchInput" class="form-control mr-sm-2" placeholder="Search..." aria-label="Search">
+        </form>  
       </div>
     </nav>
+
 
     <div class="container header-container-fluid">
       <div class="d-flex justify-content-between fixed-bottom mb-4 px-4">
@@ -61,9 +65,8 @@
       <div class="collapse mt-3" id="filterOptions">
         <div class="card card-body">
           <div class="d-flex flex-column flex-md-row align-items-center mb-3">
-            <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
-              <input type="text" id="searchInput" class="form-control w-auto mr-2" placeholder="Search...">
-              <button id="searchButton" class="btn btn-primary btn-sm">Search</button>
+            <div class="x">
+              <null id="x" class="x"></null>
             </div>
             <div class="d-flex align-items-center mb-2 mb-md-0 mr-md-3">
               <button id="filter1d" class="btn btn-secondary btn-sm mr-2">1d</button>
