--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input type="text" id="searchInput" class="form-control mr-sm-2" placeholder="Search..." aria-label="Search">
+          <button id="searchButton" class="btn btn-secondary my-2 my-sm-0" type="submit">
+            <i class="bi bi-search"></i>
+          </button>
         </form>  
       </div>
     </nav>
