--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input type="text" id="searchInput" class="form-control mr-sm-2" placeholder="Search..." aria-label="Search">
-          <button id="searchButton" class="btn btn-secondary my-2 my-sm-0" type="submit">
+          <button id="searchButton" class="btn btn-secondary my-2 my-sm-0" type="button">
             <i class="bi bi-search"></i>
           </button>
         </form>  
